# UIX

./: .gitignore  AGENTS.md  dev.sh  docker-compose.yml
.zellij/: README.md  layout.kdl
android-playground/: package.json  pnpm-lock.yaml
backend/: .dockerignore  .env.example  Dockerfile  README.md  llms-full.txt  llms.txt  pyproject.toml  test-scenes.db
backend-ts/: README.md  package-lock.json  package.json
backend/app/: main.py
backend/app/api/: generate.py  runs.py  scenes.py  scripts.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  run.py  scene.py  scene_script.py  scene_task_item.py  script.py  script_version.py
backend/app/schemas/: run.py  scene.py  script.py
backend/app/services/: http_executor.py  llm_service.py  run_service.py  scene_compiler.py  yaml_validator.py
backend/migrations/: README.md
backend/prompts/: yaml_system_prompt.txt
backend/scripts/: import_sqlite_to_mysql.py
backend/tests/: test_runs_regression.py  test_scenes_api.py
docker/: .env.example  README.md
frontend/: .dockerignore  Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
md/: architecture-analysis.md  refactor-plan.md
runner-service/: .dockerignore  Dockerfile  package-lock.json  package.json  tsconfig.json
scripts/: start-android.sh  start-backend.sh  start-frontend.sh  start-runner.sh
specify/: 1.md  context_summary.txt  deploy-runbook.md  llms.txt  midscene-api-yaml-v0.md  midscene-yaml-tasks-command-dictionary.md  task.md
(+92 files in other folders)
